--- a/src/main/resources/static/shopCar.html
+++ b/src/main/resources/static/shopCar.html
@@ -105,16 +105,16 @@
             <div class="padding-90"></div>
             <!-- Container -->
             <div class="container">
-                <h3>ABOUTUS</h3>
+                <h3>购物车</h3>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active">ABOUTUS</li>
+                    <li><a href="index.html">首页</a></li>
+                    <li class="active">购物车</li>
                 </ol>
             </div><!-- Container /- -->
             <div class="padding-100"></div>
         </div><!-- Page Banner /- -->
 
-        <div class="section-padding"></div>
+        <div class="padding-30"></div>
         <section class="cartMain">
             <div class="cartMain_hd">
                 <ul class="order_lists cartTop">
