--- a/src/main/resources/static/createOrder.html
+++ b/src/main/resources/static/createOrder.html
@@ -131,7 +131,7 @@
                 <div class="btn-group" role="group">
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-danger">生成订单</button>
+                    <button type="button" id="createOrder" class="btn btn-danger">生成订单</button>
                 </div>
             </div>
 
