--- a/src/main/resources/static/createOrder.html
+++ b/src/main/resources/static/createOrder.html
@@ -124,6 +124,25 @@
 
 
                 </div>
+
+            </div>
+
+            <div class="cartMain_hd">
+                <h3>收货人信息</h3>
+            </div>
+            <div class="cartBox">
+                <div class="order_content">
+
+                </div>
+            </div>
+
+            <div class="cartMain_hd">
+                <h3>收货人信息</h3>
+            </div>
+            <div class="cartBox">
+                <div class="order_content">
+
+                </div>
             </div>
             <div class="btn-group btn-group-justified" role="group" aria-label="...">
                 <div class="btn-group" role="group">
