--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -143,7 +143,7 @@
 									data-responsive_offset="on"
 									data-elementdelay="0.05"
 									style="z-index:6; position:relative; color:#fff; font-weight:400; letter-spacing: 7px; font-family: 'Roboto Slab', serif; text-transform: uppercase;">
-									<h3>全国各地,急速取车</h3>
+									<h3>AutoMotive</h3>
 								</div>
 
 								<!-- LAYER NR. 3 -->
