--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,10 +14,10 @@
 		<!-- Standard Favicon -->
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 		<!-- Library - Google Font Familys -->
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="libraries/lightslider/lightslider.min.css" />
+		<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">-->
+		<!--<link rel="stylesheet" type="text/css" href="libraries/lightslider/lightslider.min.css" />-->
 		<link rel="stylesheet" type="text/css" href="revolution/css/settings.css">
-		<!-- RS5.0 Layers and Navigation Styles -->
+		<!--&lt;!&ndash; RS5.0 Layers and Navigation Styles &ndash;&gt;-->
 		<link rel="stylesheet" type="text/css" href="revolution/css/layers.css">
 		<link rel="stylesheet" type="text/css" href="revolution/css/navigation.css">
 		<!-- Library - Bootstrap v3.3.5 -->
@@ -27,6 +27,11 @@
 		<link rel="stylesheet" type="text/css" href="css/plugins.css">
 		<link rel="stylesheet" type="text/css" href="css/navigation-menu.css">
 		<link rel="stylesheet" type="text/css" href="css/shortcode.css">
+		<style>
+			.checkType{
+				color: red!important;
+			}
+		</style>
 		<!--[if lt IE 9]>
 		<script src="js/html5/respond.min.js"></script>
 		<![endif]-->
