--- a/src/main/resources/static/footer.html
+++ b/src/main/resources/static/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer-main container-fluid no-padding">
     <div class="container">
         <div class="logo-block col-md-12 col-sm-12 col-xs-12 no-padding">
-            <a href="#" title="Logo"><img src="images/ftr-logo.png" alt="Logo"></a>
+            <a href="#" title="Logo"><img src="/images/ftr-logo.png" alt="Logo"></a>
         </div>
     </div>
     <!-- Library - Js -->
