--- a/src/main/resources/static/404.html
+++ b/src/main/resources/static/404.html
@@ -16,16 +16,16 @@
 	<title>Error Page</title>
 
 	<!-- Standard Favicon -->
-	<link rel="icon" type="image/x-icon" href="images//favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="/images//favicon.ico" />
 
 	<!-- For iPhone 4 Retina display: -->
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images//apple-touch-icon-114x114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images//apple-touch-icon-114x114-precomposed.png">
 
 	<!-- For iPad: -->
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images//apple-touch-icon-72x72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images//apple-touch-icon-72x72-precomposed.png">
 
 	<!-- For iPhone: -->
-	<link rel="apple-touch-icon-precomposed" href="images//apple-touch-icon-57x57-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" href="/images//apple-touch-icon-57x57-precomposed.png">
 
 	<!-- Library - Google Font Familys -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -63,8 +63,8 @@
 				<!-- Top Header -->
 				<div class="top-header container-fluid no-padding">
 					<div class="col-md-8 col-sm-12 col-xs-12 top-icons no-padding">
-						<a href="#"><img src="images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
-						<a href="#"><img src="images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
+						<a href="#"><img src="/images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
+						<a href="#"><img src="/images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
 						<ul>
 							<li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -81,12 +81,12 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a href="index.html" class="navbar-brand"><img src="images/logo.png" alt="Logo" /></a>
+						<a href="index.html" class="navbar-brand"><img src="/images/logo.png" alt="Logo" /></a>
 					</div>
 					<!-- Menu Icon -->
 					<div class="menu-icon">
 						<div class="search">
-							<a href="#" id="search" title="Search"><img src="images/search-ic.png" alt="Search" /></a>
+							<a href="#" id="search" title="Search"><img src="/images/search-ic.png" alt="Search" /></a>
 						</div>
 					</div><!-- Menu Icon /- -->
 					<div class="navbar-collapse collapse navbar-right" id="navbar">
@@ -155,11 +155,11 @@
 			
 			<div class="container-fluid no-padding error-section">
 				<div class="col-md-6 no-padding">
-					<img src="images/404.jpg" alt="404" />
+					<img src="/images/404.jpg" alt="404" />
 				</div>
 				<div class="col-md-6 no-padding">
 					<div class="error-content">
-						<img src="images/404-txt.png" alt="404 Text" />
+						<img src="/images/404-txt.png" alt="404 Text" />
 						<h3>sorry! page not found</h3>
 						<div class="input-group">
 							<input type="text" class="form-control" placeholder="Type here to Search...">
@@ -181,7 +181,7 @@
 			<!-- Container -->
 			<div class="container">
 				<div class="logo-block col-md-12 col-sm-12 col-xs-12 no-padding">
-					<a href="#" title="Logo"><img src="images/ftr-logo.png" alt="Logo" /></a>
+					<a href="#" title="Logo"><img src="/images/ftr-logo.png" alt="Logo" /></a>
 				</div>
 				<div class="row">
 					<div class="col-md-3 col-sm-6 col-xs-6">
