--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -16,16 +16,16 @@
 	<title>About</title>
 
 	<!-- Standard Favicon -->
-	<link rel="icon" type="image/x-icon" href="images//favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="/images//favicon.ico" />
 
 	<!-- For iPhone 4 Retina display: -->
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images//apple-touch-icon-114x114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images//apple-touch-icon-114x114-precomposed.png">
 
 	<!-- For iPad: -->
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images//apple-touch-icon-72x72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images//apple-touch-icon-72x72-precomposed.png">
 
 	<!-- For iPhone: -->
-	<link rel="apple-touch-icon-precomposed" href="images//apple-touch-icon-57x57-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" href="/images//apple-touch-icon-57x57-precomposed.png">
 
 	<!-- Library - Google Font Familys -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -63,8 +63,8 @@
 				<!-- Top Header -->
 				<div class="top-header container-fluid no-padding">
 					<div class="col-md-8 col-sm-12 col-xs-12 top-icons no-padding">
-						<a href="#"><img src="images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
-						<a href="#"><img src="images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
+						<a href="#"><img src="/images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
+						<a href="#"><img src="/images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
 						<ul>
 							<li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -81,12 +81,12 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a href="index.html" class="navbar-brand"><img src="images/logo.png" alt="Logo" /></a>
+						<a href="index.html" class="navbar-brand"><img src="/images/logo.png" alt="Logo" /></a>
 					</div>
 					<!-- Menu Icon -->
 					<div class="menu-icon">
 						<div class="search">
-							<a href="#" id="search" title="Search"><img src="images/search-ic.png" alt="Search" /></a>
+							<a href="#" id="search" title="Search"><img src="/images/search-ic.png" alt="Search" /></a>
 						</div>
 					</div><!-- Menu Icon /- -->
 					<div class="navbar-collapse collapse navbar-right" id="navbar">
@@ -158,7 +158,7 @@
 				<div class="container">	
 					<div class="img-block">
 						<h3>zone <span>2k16</span></h3>
-						<img src="images/welcome2.jpg" alt="welcome2" /> 
+						<img src="/images/welcome2.jpg" alt="welcome2" />
 					</div>
 					<div class="welcome-content-box">
 						<div class="row">
@@ -281,19 +281,19 @@
 				<div class="container">
 					<div class="partner-carousel">
 						<div class="item">
-							<a href="#"><img src="images/partner-logo1.png" alt="Partner" /></a>
+							<a href="#"><img src="/images/partner-logo1.png" alt="Partner" /></a>
 						</div>
 						<div class="item">
-							<a href="#"><img src="images/partner-logo2.png" alt="Partner" /></a>
+							<a href="#"><img src="/images/partner-logo2.png" alt="Partner" /></a>
 						</div>
 						<div class="item">
-							<a href="#"><img src="images/partner-logo3.png" alt="Partner" /></a>
+							<a href="#"><img src="/images/partner-logo3.png" alt="Partner" /></a>
 						</div>
 						<div class="item">
-							<a href="#"><img src="images/partner-logo4.png" alt="Partner" /></a>
+							<a href="#"><img src="/images/partner-logo4.png" alt="Partner" /></a>
 						</div>
 						<div class="item">
-							<a href="#"><img src="images/partner-logo5.png" alt="Partner" /></a>
+							<a href="#"><img src="/images/partner-logo5.png" alt="Partner" /></a>
 						</div>
 					</div>
 				</div><!-- Container /- -->
@@ -312,7 +312,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-4 col-xs-6">
 							<div class="team-box">
-								<img src="images/team1.jpg" alt="Team" />
+								<img src="/images/team1.jpg" alt="Team" />
 								<div class="team-content">
 									<h3>MARK WILLIAMSON <span>ADVISOR</span></h3>
 									<ul>
@@ -325,7 +325,7 @@
 						</div>
 						<div class="col-md-4 col-sm-4 col-xs-6">
 							<div class="team-box">
-								<img src="images/team2.jpg" alt="Team" />
+								<img src="/images/team2.jpg" alt="Team" />
 								<div class="team-content">
 									<h3>MARK WILLIAMSON <span>ADVISOR</span></h3>
 									<ul>
@@ -338,7 +338,7 @@
 						</div>
 						<div class="col-md-4 col-sm-4 col-xs-6">
 							<div class="team-box">
-								<img src="images/team3.jpg" alt="Team" />
+								<img src="/images/team3.jpg" alt="Team" />
 								<div class="team-content">
 									<h3>MARK WILLIAMSON <span>ADVISOR</span></h3>
 									<ul>
@@ -360,7 +360,7 @@
 				<div class="padding-50"></div>
 				<!-- Container -->
 				<div class="container">
-					<img src="images/cta-logo.png" alt="Loog" />
+					<img src="/images/cta-logo.png" alt="Loog" />
 					<h3>have any queries? call us anytime</h3>
 					<a href="#" title="Contact Us">Contact Us</a>
 				</div><!-- Container /- -->
@@ -421,7 +421,7 @@
 			<!-- Container -->
 			<div class="container">
 				<div class="logo-block col-md-12 col-sm-12 col-xs-12 no-padding">
-					<a href="#" title="Logo"><img src="images/ftr-logo.png" alt="Logo" /></a>
+					<a href="#" title="Logo"><img src="/images/ftr-logo.png" alt="Logo" /></a>
 				</div>
 				<div class="row">
 					<div class="col-md-3 col-sm-6 col-xs-6">
