--- a/src/main/resources/static/carDetail.html
+++ b/src/main/resources/static/carDetail.html
@@ -16,16 +16,16 @@
     <title>Inventory Single</title>
 
     <!-- Standard Favicon -->
-    <link rel="icon" type="image/x-icon" href="images//favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/images//favicon.ico" />
 
     <!-- For iPhone 4 Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images//apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images//apple-touch-icon-114x114-precomposed.png">
 
     <!-- For iPad: -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images//apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images//apple-touch-icon-72x72-precomposed.png">
 
     <!-- For iPhone: -->
-    <link rel="apple-touch-icon-precomposed" href="images//apple-touch-icon-57x57-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/images//apple-touch-icon-57x57-precomposed.png">
 
     <!-- Library - Google Font Familys -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -80,12 +80,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand"><img src="images/logo.png" alt="Logo"></a>
+                    <a href="index.html" class="navbar-brand"><img src="/images/logo.png" alt="Logo"></a>
                 </div>
                 <!-- Menu Icon -->
                 <div class="menu-icon">
                     <div class="search">
-                        <a href="#" id="search" title="Search"><img src="images/search-ic.png" alt="Search"></a>
+                        <a href="#" id="search" title="Search"><img src="/images/search-ic.png" alt="Search"></a>
                     </div>
                 </div><!-- Menu Icon /- -->
                 <div class="navbar-collapse collapse navbar-right" id="navbar">
@@ -94,7 +94,7 @@
                             <a href="index.html" title="首页" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">首页</a>
                             <i class="ddl-switch fa fa-angle-down"></i>
                         </li>
-                        <li class="dropdown"><a href="shopCar.html" title="购物车">购物车</a></li>
+                        <li class="dropdown"><a href="/p/shopCar" title="购物车">购物车</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </nav><!-- nav /- -->
@@ -182,7 +182,7 @@
         <!-- Container -->
         <div class="container">
             <div class="logo-block col-md-12 col-sm-12 col-xs-12 no-padding">
-                <a href="#" title="Logo"><img src="images/ftr-logo.png" alt="Logo"></a>
+                <a href="#" title="Logo"><img src="/images/ftr-logo.png" alt="Logo"></a>
             </div>
         </div><!-- Container /- -->
     </footer>
