--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -12,13 +12,13 @@
     <meta name="author" content="">
     <title>Home</title>
     <!-- Standard Favicon -->
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <!-- For iPhone 4 Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images//apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images//apple-touch-icon-114x114-precomposed.png">
     <!-- For iPad: -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images//apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images//apple-touch-icon-72x72-precomposed.png">
     <!-- For iPhone: -->
-    <link rel="apple-touch-icon-precomposed" href="images//apple-touch-icon-57x57-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/images//apple-touch-icon-57x57-precomposed.png">
     <!-- Library - Google Font Familys -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="libraries/lightslider/lightslider.min.css" />
@@ -70,12 +70,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand"><img src="images/logo.png" alt="Logo"></a>
+                    <a href="index.html" class="navbar-brand"><img src="/images/logo.png" alt="Logo"></a>
                 </div>
                 <!-- Menu Icon -->
                 <div class="menu-icon">
                     <div class="search">
-                        <a href="#" id="search" title="Search"><img src="images/search-ic.png" alt="Search"></a>
+                        <a href="#" id="search" title="Search"><img src="/images/search-ic.png" alt="Search"></a>
                     </div>
                 </div><!-- Menu Icon /- -->
                 <div class="navbar-collapse collapse navbar-right" id="navbar">
