--- a/src/main/resources/static/inventory-single.html
+++ b/src/main/resources/static/inventory-single.html
@@ -16,16 +16,16 @@
 	<title>Inventory Single</title>
 
 	<!-- Standard Favicon -->
-	<link rel="icon" type="image/x-icon" href="images//favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="/images//favicon.ico" />
 
 	<!-- For iPhone 4 Retina display: -->
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images//apple-touch-icon-114x114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images//apple-touch-icon-114x114-precomposed.png">
 
 	<!-- For iPad: -->
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images//apple-touch-icon-72x72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images//apple-touch-icon-72x72-precomposed.png">
 
 	<!-- For iPhone: -->
-	<link rel="apple-touch-icon-precomposed" href="images//apple-touch-icon-57x57-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" href="/images//apple-touch-icon-57x57-precomposed.png">
 
 	<!-- Library - Google Font Familys -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -72,8 +72,8 @@
 				<!-- Top Header -->
 				<div class="top-header container-fluid no-padding">
 					<div class="col-md-8 col-sm-12 col-xs-12 top-icons no-padding">
-						<a href="#"><img src="images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
-						<a href="#"><img src="images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
+						<a href="#"><img src="/images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
+						<a href="#"><img src="/images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
 						<ul>
 							<li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -90,12 +90,12 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a href="index.html" class="navbar-brand"><img src="images/logo.png" alt="Logo" /></a>
+						<a href="index.html" class="navbar-brand"><img src="/images/logo.png" alt="Logo" /></a>
 					</div>
 					<!-- Menu Icon -->
 					<div class="menu-icon">
 						<div class="search">
-							<a href="#" id="search" title="Search"><img src="images/search-ic.png" alt="Search" /></a>
+							<a href="#" id="search" title="Search"><img src="/images/search-ic.png" alt="Search" /></a>
 						</div>
 					</div><!-- Menu Icon /- -->
 					<div class="navbar-collapse collapse navbar-right" id="navbar">
@@ -168,17 +168,17 @@
 					<div class="col-md-8 col-sm-8 col-xs-12 content-area">
 						<div class="inventory-slider">
 							<ul id="imageGallery"  class="gallery">
-								<li data-thumb="images/inventroy-single-thumb1.png">
-									<img src="images/inventroy-single1.png" alt="Inventory" />
+								<li data-thumb="/images/inventroy-single-thumb1.png">
+									<img src="/images/inventroy-single1.png" alt="Inventory" />
 								</li>
-								<li data-thumb="images/inventroy-single-thumb2.png">
-									<img src="images/inventroy-single1.png" alt="Inventory" />
+								<li data-thumb="/images/inventroy-single-thumb2.png">
+									<img src="/images/inventroy-single1.png" alt="Inventory" />
 								</li>
-								<li data-thumb="images/inventroy-single-thumb3.png">
-									<img src="images/inventroy-single1.png" alt="Inventory" />
+								<li data-thumb="/images/inventroy-single-thumb3.png">
+									<img src="/images/inventroy-single1.png" alt="Inventory" />
 								</li>
-								<li data-thumb="images/inventroy-single-thumb4.png">
-									<img src="images/inventroy-single1.png" alt="Inventory" />
+								<li data-thumb="/images/inventroy-single-thumb4.png">
+									<img src="/images/inventroy-single1.png" alt="Inventory" />
 								</li>
 							</ul>
 						</div>
@@ -280,7 +280,7 @@
 			<!-- Container -->
 			<div class="container">
 				<div class="logo-block col-md-12 col-sm-12 col-xs-12 no-padding">
-					<a href="#" title="Logo"><img src="images/ftr-logo.png" alt="Logo" /></a>
+					<a href="#" title="Logo"><img src="/images/ftr-logo.png" alt="Logo" /></a>
 				</div>
 				<div class="row">
 					<div class="col-md-3 col-sm-6 col-xs-6">
