--- a/src/main/resources/static/services.html
+++ b/src/main/resources/static/services.html
@@ -16,16 +16,16 @@
 	<title>Services</title>
 
 	<!-- Standard Favicon -->
-	<link rel="icon" type="image/x-icon" href="images//favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="/images//favicon.ico" />
 
 	<!-- For iPhone 4 Retina display: -->
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images//apple-touch-icon-114x114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images//apple-touch-icon-114x114-precomposed.png">
 
 	<!-- For iPad: -->
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images//apple-touch-icon-72x72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images//apple-touch-icon-72x72-precomposed.png">
 
 	<!-- For iPhone: -->
-	<link rel="apple-touch-icon-precomposed" href="images//apple-touch-icon-57x57-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" href="/images//apple-touch-icon-57x57-precomposed.png">
 
 	<!-- Library - Google Font Familys -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -63,8 +63,8 @@
 				<!-- Top Header -->
 				<div class="top-header container-fluid no-padding">
 					<div class="col-md-8 col-sm-12 col-xs-12 top-icons no-padding">
-						<a href="#"><img src="images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
-						<a href="#"><img src="images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
+						<a href="#"><img src="/images/chat-ic.png" alt="Chat" /><span>Click to</span><b>Chat</b></a>
+						<a href="#"><img src="/images/phone-ic.png" alt="Phone" /><span>Call at</span><b>1-800-23-456-7890</b></a>
 						<ul>
 							<li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -81,12 +81,12 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a href="index.html" class="navbar-brand"><img src="images/logo.png" alt="Logo" /></a>
+						<a href="index.html" class="navbar-brand"><img src="/images/logo.png" alt="Logo" /></a>
 					</div>
 					<!-- Menu Icon -->
 					<div class="menu-icon">
 						<div class="search">
-							<a href="#" id="search" title="Search"><img src="images/search-ic.png" alt="Search" /></a>
+							<a href="#" id="search" title="Search"><img src="/images/search-ic.png" alt="Search" /></a>
 						</div>
 					</div><!-- Menu Icon /- -->
 					<div class="navbar-collapse collapse navbar-right" id="navbar">
@@ -207,7 +207,7 @@
 						</div>
 					</div><!-- Row /- -->
 				</div><!-- Container /- -->
-				<img src="images/whyus-bg.jpg" alt="WhyUs" />
+				<img src="/images/whyus-bg.jpg" alt="WhyUs" />
 			</div><!-- Why Choose Us Section /- -->
 			
 			<div class="padding-100"></div>
@@ -227,19 +227,19 @@
 							<!-- Nav tabs -->
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation" class="active">
-									<a href="#suv" role="tab" data-toggle="tab"><i><img src="images/vt-ic1.png" alt="vt-ic" /></i>suv</a>
+									<a href="#suv" role="tab" data-toggle="tab"><i><img src="/images/vt-ic1.png" alt="vt-ic" /></i>suv</a>
 								</li>
 								<li role="presentation">
-									<a href="#pickup" role="tab" data-toggle="tab"><i><img src="images/vt-ic2.png" alt="vt-ic" /></i>pickup</a>
+									<a href="#pickup" role="tab" data-toggle="tab"><i><img src="/images/vt-ic2.png" alt="vt-ic" /></i>pickup</a>
 								</li>
 								<li role="presentation">
-									<a href="#convertible" role="tab" data-toggle="tab"><i><img src="images/vt-ic3.png" alt="vt-ic" /></i>convertible</a>
+									<a href="#convertible" role="tab" data-toggle="tab"><i><img src="/images/vt-ic3.png" alt="vt-ic" /></i>convertible</a>
 								</li>
 								<li role="presentation">
-									<a href="#sedan" role="tab" data-toggle="tab"><i><img src="images/vt-ic4.png" alt="vt-ic" /></i>sedan</a>
+									<a href="#sedan" role="tab" data-toggle="tab"><i><img src="/images/vt-ic4.png" alt="vt-ic" /></i>sedan</a>
 								</li>
 								<li role="presentation">
-									<a href="#coupe" role="tab" data-toggle="tab"><i><img src="images/vt-ic5.png" alt="vt-ic" /></i>coupe</a>
+									<a href="#coupe" role="tab" data-toggle="tab"><i><img src="/images/vt-ic5.png" alt="vt-ic" /></i>coupe</a>
 								</li>
 							</ul>
 						</div>
@@ -256,21 +256,21 @@
 									<!-- Wrapper for slides -->
 									<div class="carousel-inner" role="listbox">
 										<div class="item active">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about suv</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about suv</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about suv</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
@@ -290,21 +290,21 @@
 									<!-- Wrapper for slides -->
 									<div class="carousel-inner" role="listbox">
 										<div class="item active">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about pickup</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about pickup</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about pickup</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
@@ -324,21 +324,21 @@
 									<!-- Wrapper for slides -->
 									<div class="carousel-inner" role="listbox">
 										<div class="item active">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about convertible</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about convertible</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about convertible</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
@@ -358,21 +358,21 @@
 									<!-- Wrapper for slides -->
 									<div class="carousel-inner" role="listbox">
 										<div class="item active">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about sedan</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about sedan</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about sedan</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
@@ -392,21 +392,21 @@
 									<!-- Wrapper for slides -->
 									<div class="carousel-inner" role="listbox">
 										<div class="item active">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about coupe</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about coupe</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
 											</div>
 										</div>
 										<div class="item">
-											<img src="images/vechicaltype-img1.jpg" alt="Vechical Type" />
+											<img src="/images/vechicaltype-img1.jpg" alt="Vechical Type" />
 											<div class="carousel-caption">
 												<h4>about coupe</h4>
 												<p>It is a beautiful day in this neighborhood a beautiful day for a neighbor would you be mine could you be mine its a neighborly day in this beautywood.</p>
@@ -429,22 +429,22 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-3 col-sm-6 col-xs-6 counter-box">
-							<img src="images/counter-1.png" alt="Counter" /> 
+							<img src="/images/counter-1.png" alt="Counter" />
 							<h3><span class="count" id="statistics_1_count-1" data-statistics_percent="2500">&nbsp;</span></h3>
 							<p>happy client</p>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-6 counter-box">
-							<img src="images/counter-2.png" alt="Counter" /> 
+							<img src="/images/counter-2.png" alt="Counter" />
 							<h3><span class="count" id="statistics_1_count-2" data-statistics_percent="490">&nbsp;</span></h3>
 							<p>coffee cups</p>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-6 counter-box">
-							<img src="images/counter-3.png" alt="Counter" /> 
+							<img src="/images/counter-3.png" alt="Counter" />
 							<h3><span class="count" id="statistics_1_count-3" data-statistics_percent="50">&nbsp;</span></h3>
 							<p>branches</p>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-6 counter-box">
-							<img src="images/counter-4.png" alt="Counter" /> 
+							<img src="/images/counter-4.png" alt="Counter" />
 							<h3><span class="count" id="statistics_1_count-4" data-statistics_percent="345">&nbsp;</span></h3>
 							<p>employees</p>
 						</div>
@@ -467,7 +467,7 @@
 					<!-- Row -->
 					<div class="row">
 						<div class="col-md-4 col-sm-6 col-xs-12 inventroy-box">
-							<img src="images/inventroy1.jpg" alt="Inventory" />
+							<img src="/images/inventroy1.jpg" alt="Inventory" />
 							<div class="inventroy-content">
 								<h3>aucra al-series</h3>
 								<span>2016</span>
@@ -478,7 +478,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 inventroy-box">
-							<img src="images/inventroy2.jpg" alt="Inventory" />
+							<img src="/images/inventroy2.jpg" alt="Inventory" />
 							<div class="inventroy-content">
 								<h3>aston martin rx-105</h3>
 								<span>2016</span>
@@ -489,7 +489,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 inventroy-box">
-							<img src="images/inventroy3.jpg" alt="Inventory" />
+							<img src="/images/inventroy3.jpg" alt="Inventory" />
 							<div class="inventroy-content">
 								<h3>lexus lt 1108</h3>
 								<span>2016</span>
@@ -513,7 +513,7 @@
 			<!-- Container -->
 			<div class="container">
 				<div class="logo-block col-md-12 col-sm-12 col-xs-12 no-padding">
-					<a href="#" title="Logo"><img src="images/ftr-logo.png" alt="Logo" /></a>
+					<a href="#" title="Logo"><img src="/images/ftr-logo.png" alt="Logo" /></a>
 				</div>
 				<div class="row">
 					<div class="col-md-3 col-sm-6 col-xs-6">
