--- a/src/main/resources/static/shopCar.html
+++ b/src/main/resources/static/shopCar.html
@@ -17,7 +17,7 @@
     <!-- JQuery v1.12.4 -->
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- Standard Favicon -->
-    <link rel="icon" type="image/x-icon" href="images//favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/images//favicon.ico" />
 
     <!-- Library - Google Font Familys -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -72,12 +72,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand"><img src="images/logo.png" alt="Logo"></a>
+                    <a href="index.html" class="navbar-brand"><img src="/images/logo.png" alt="Logo"></a>
                 </div>
                 <!-- Menu Icon -->
                 <div class="menu-icon">
                     <div class="search">
-                        <a href="#" id="search" title="Search"><img src="images/search-ic.png" alt="Search"></a>
+                        <a href="#" id="search" title="Search"><img src="/images/search-ic.png" alt="Search"></a>
                     </div>
                 </div><!-- Menu Icon /- -->
                 <div class="navbar-collapse collapse navbar-right" id="navbar">
@@ -86,7 +86,7 @@
                             <a href="index.html" title="首页" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">首页</a>
                             <i class="ddl-switch fa fa-angle-down"></i>
                         </li>
-                        <li class="active dropdown"><a href="shopCar.html" title="购物车">购物车</a></li>
+                        <li class="active dropdown"><a href="/p/shopCar" title="购物车">购物车</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </nav><!-- nav /- -->
@@ -169,7 +169,7 @@
         <!-- Container -->
         <div class="container">
             <div class="logo-block col-md-12 col-sm-12 col-xs-12 no-padding">
-                <a href="#" title="Logo"><img src="images/ftr-logo.png" alt="Logo"></a>
+                <a href="#" title="Logo"><img src="/images/ftr-logo.png" alt="Logo"></a>
             </div>
         </div><!-- Container /- -->
     </footer>
